# ReconX

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
configs/: scope.example.yaml
configs/profiles/: deep.yaml  fast.yaml  normal.yaml
configs/wordlists/: creepy_paths.txt  github_dorks.txt  vhosts.txt  wellknown.txt
reconx/: __init__.py  __main__.py  cli.py
reconx/adapters/: __init__.py  finalrecon.py  katana.py
reconx/ai/: __init__.py  engine.py  prompts.py  providers.py
reconx/core/: __init__.py  config.py  dedupe.py  http.py  normalize.py  ratelimit.py  runner.py  scheduler.py  scope.py  store.py
reconx/reports/: __init__.py  diff.py  export.py  html_report.py  summary.py
reconx/stages/: __init__.py  dns_baseline.py  fingerprint.py  osint_emails.py  osint_github.py  osint_metadata.py  params.py  search_discovery.py  subdomains.py  urls.py  validate_services.py  vhosts.py  vuln_misc.py  vuln_nuclei.py  vuln_sqli.py  vuln_xss.py  zone_transfer.py
tests/: test_ai_sanitize.py  test_dedupe.py  test_http_flags.py  test_normalize.py  test_params_filters.py  test_runner_retries.py  test_scope.py  test_subdomains_roots.py  test_wildcard_baseline.py
