[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconx"
dynamic = ["version"]
description = "AI-powered automated recon orchestrator for bug bounty and pentesting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yeswanth"}
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "dnspython>=2.4",
    "rich>=13.0",
    "httpx>=0.27",
    "tldextract>=5.1",
    "validators>=0.22",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
reconx = "reconx.cli:main"

[tool.setuptools.packages.find]
include = ["reconx*"]

[tool.setuptools.dynamic]
version = {attr = "reconx.__version__"}
