[metadata]
name = reconx
version = 1.0.0
author = yeswanth
description = AI-Powered Automated Recon Orchestrator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yeswanth/reconx
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security
    Intended Audience :: Information Technology

[options]
packages = find:
python_requires = >=3.10
install_requires =
    click>=8.1
    pyyaml>=6.0
    dnspython>=2.4
    rich>=13.0
    httpx>=0.25
    openai>=1.0
    ollama>=0.1

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[options.entry_points]
console_scripts =
    reconx = reconx.cli:main

[options.package_data]
reconx =
    ../configs/**/*
